<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layoutDirection="rtl"
        android:background="@color/colorPrimary"
        android:gravity="right">
        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/logo4"
            android:id="@+id/logo"
            android:background="@drawable/shape_border_logo"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="16dp"
            android:textColor="@color/colorText"
            android:layout_marginRight="16dp"
            android:layout_above="@id/username"
            android:layout_toLeftOf="@id/logo"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="username"
            android:textSize="12sp"
            android:gravity="bottom"
            android:id="@+id/username"
            android:layout_gravity="bottom"
            android:textColor="@color/colorText"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="8dp"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@id/logo"/>
    </RelativeLayout>
    //====================body===============================
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorText"
        android:padding="16dp">
        //==============home=========================


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_home"
            android:text="@string/home"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryText"
            android:layout_toLeftOf="@+id/img_home_menu"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_home"
                android:layout_marginLeft="10dp"
                android:id="@+id/img_home_menu"
                android:layout_alignParentRight="true"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/colorSecondaryText"
            android:layout_below="@id/img_home_menu"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:id="@+id/line1"/>
        //====================dastebandi====================
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:id="@+id/txt_history"
            android:text="@string/history"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryText"
            android:layout_toLeftOf="@+id/img_history"
            android:layout_below="@id/line1"
            android:layout_marginBottom="16dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_library_books"
            android:layout_marginLeft="10dp"
            android:id="@+id/img_history"
            android:layout_alignParentRight="true"
            android:layout_below="@id/line1"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="24sp"
            android:id="@+id/text_video"
            android:text="@string/video"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryText"
            android:layout_toLeftOf="@+id/img_video"
            android:layout_below="@id/txt_history"
            android:layout_marginBottom="16dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_video"
            android:layout_marginLeft="10dp"
            android:id="@+id/img_video"
            android:layout_alignParentRight="true"
            android:layout_below="@id/img_history"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="24sp"
            android:id="@+id/txt_favorite"
            android:text="@string/alaqemandi"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryText"
            android:layout_toLeftOf="@+id/img_favorite"
            android:layout_below="@id/text_video" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_favorite"
            android:layout_marginLeft="10dp"
            android:id="@+id/img_favorite"
            android:layout_alignParentRight="true"
            android:layout_below="@id/img_video"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/colorSecondaryText"
            android:layout_below="@id/img_favorite"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:id="@+id/line2"/>
        //====================about====================
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:id="@+id/text_about"
            android:text="@string/darbarema"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryText"
            android:layout_toLeftOf="@+id/img_about"
            android:layout_below="@id/line2"
            android:layout_marginBottom="16dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_info"
            android:layout_marginLeft="10dp"
            android:id="@+id/img_about"
            android:layout_alignParentRight="true"
            android:layout_below="@id/line2"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:id="@+id/txt_call_me"
            android:text="@string/tamasbama"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryText"
            android:layout_toLeftOf="@+id/img_about"
            android:layout_below="@id/text_about"
            android:layout_marginBottom="16dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_call_"
            android:layout_marginLeft="10dp"
            android:id="@+id/img_call_me"
            android:layout_alignParentRight="true"
            android:layout_below="@id/img_about"
            android:layout_marginBottom="16dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:id="@+id/txt_exit"
            android:text="@string/exit"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryText"
            android:layout_toLeftOf="@+id/img_exit"
            android:layout_below="@id/txt_call_me"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_power"
            android:layout_marginLeft="10dp"
            android:id="@+id/img_exit"
            android:layout_alignParentRight="true"
            android:layout_below="@id/img_call_me"/>
    </RelativeLayout>
</LinearLayout>